2013-11-03  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Quechua, Southern (quz) and Silesian (szl)
	to iso-639.def.

2013-11-03  Ondřej Bílka  <neleai@seznam.cz>

	* elf/rtld.c: Remove unused NONTLS_INIT_TP.

2013-11-01  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #16112]
	* malloc/malloc (malloc_info): Do not handle first bin as
	special case.

2013-11-01  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Central Nahuatl (nhn).

2013-11-01  Bruno Haible  <bruno@clisp.org>

	[BZ #7003]
	* manual/math.texi (BSD Random): Specify range upper bound as
	in POSIX.

2013-10-31  Chris Leonard  <cjl@sugarlabs.org>

	* locale/iso-639.def: Add Meadow Mari (mhr).

2013-10-31  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #14752], [BZ #15763]
	* sysdeps/unix/sysv/linux/shm_open.c (shm_open, shm_unlink):
	Validate name.
	* rt/tst_shm.c: Add test for escaping directory.

2013-10-31  Andreas Schwab  <schwab@suse.de>

	[BZ #15917]
	* stdio-common/vfscanf.c (_IO_vfwscanf): Handle leading '0' not
	followed by 'x' as part of digit sequence.
	* stdio-common/tst-sscanf.c (double_tests2): New tests.

2013-10-31  Marc-Antoine Perennou <Marc-Antoine@Perennou.com>

	[BZ #16037]
	* configure.ac: allow GNU Make 4.0 and greater.
	* configure: Regenerated.

2013-10-30  Will Newton  <will.newton@linaro.org>

	[BZ #16038]
	* malloc/hooks.c (memalign_check): Limit alignment to the
	maximum representable power of two.
	* malloc/malloc.c (__libc_memalign): Likewise.
	* malloc/tst-memalign.c (do_test): Add test for very
	large alignment values.
	* malloc/tst-posix_memalign.c (do_test): Likewise.

2013-10-30  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #11087]
	* malloc/malloc.c (sysmalloc): Compute statistics atomically.
	(munmap_chunk): Likewise.
	(mremap_chunk): Likewise.

2013-10-30  Ondřej Bílka  <neleai@seznam.cz>

	[BZ #15799]
	* stdlib/div.c (div): Remove obsolete code.
	* stdlib/ldiv.c (ldiv): Likewise.
	* stdlib/lldiv.c (lldiv): Likewise.
