@@ -486,6 +486,7 @@ DEFINE_LANGUAGE_CODE3 ("Ugaritic", uga, uga)
 DEFINE_LANGUAGE_CODE ("Uighur; Uyghur", ug, uig, uig)
 DEFINE_LANGUAGE_CODE ("Ukrainian", uk, ukr, ukr)
 DEFINE_LANGUAGE_CODE3 ("Umbundu", umb, umb)
+DEFINE_LANGUAGE_CODE3 ("Unami Delaware", unm, unm)
 DEFINE_LANGUAGE_CODE3 ("Undetermined", und, und)
 DEFINE_LANGUAGE_CODE3 ("Upper Sorbian", hsb, hsb)
 DEFINE_LANGUAGE_CODE ("Urdu", ur, urd, urd)
@@ -497,7 +498,7 @@ DEFINE_LANGUAGE_CODE ("Volapük", vo, vol, vol)
 DEFINE_LANGUAGE_CODE3 ("Votic", vot, vot)
 DEFINE_LANGUAGE_CODE3 ("Wakashan languages", wak, wak)
 DEFINE_LANGUAGE_CODE3 ("Walser", wae, wae)
-DEFINE_LANGUAGE_CODE3 ("Walamo", wal, wal)
+DEFINE_LANGUAGE_CODE3 ("Walaita", wal, wal)
 DEFINE_LANGUAGE_CODE ("Walloon", wa, wln, wln)
 DEFINE_LANGUAGE_CODE3 ("Waray", war, war)
 DEFINE_LANGUAGE_CODE3 ("Washo", was, was)
