@@ -113,9 +113,6 @@ country_car    "<U0045><U0054><U0048>"
 lang_name     "<U12C8><U120B><U12ED><U1273><U1271>"
 lang_term     "<U0077><U0061><U006C>"
 lang_lib      "<U0077><U0061><U006C>"
-
-
-%
 END LC_ADDRESS
 
 
